--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "mockery/mockery": "~1.0",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "classmap": [
