--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "guzzlehttp/guzzle": "~6.0",
+        "imangazaliev/didom": "^1.13",
         "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~2.2",
-        "guzzlehttp/guzzle": "~6.0"
+        "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
